--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+span {
+  margin: 0 !important;
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
