--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quantico:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap');
 
 #root {
   width: 100%;
@@ -190,7 +191,6 @@
         }
       }
 
-      // La regla anterior `:focus` ha sido eliminada.
     }
   }
 }
@@ -203,10 +203,6 @@
   filter: blur(3px);
 }
 
-#div-circulitos{
-
-
-}
 
 #botonera-certificados{
   display: flex;
@@ -224,7 +220,7 @@
 #app-container{
   position: relative!important;
   z-index: 1;
-  overflow-x: hidden;
+  overflow-x: visible;
 }
 
 #sobre-mi-container{
@@ -375,24 +371,195 @@
 }
 
 
-.cuadro-sobremi {
 
-  .mantine-Card-root {
-    width: 200px;
-    align-self: center;
-    justify-self: center;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#proyectos-container {
+  padding-top: 90px;
+  margin: 0 auto;
+  width: 60vw;
+  height: 80vh;
+
+  @media (max-width: 768px){
+    width: 100%;
+    height: 90vh;
+    overflow-y: scroll;
   }
 
-  p{
-    white-space: pre-line;
-    text-align: left;
-    padding: 10px;
-    margin: 0;
+  .slick-slider {
+    height: 100%;
+  }
+
+  .slick-list {
+    height: 100%;
+    overflow: visible; // importante para que se vean los laterales
+  }
+
+  .slick-track {
+    height: 100%;
+  }
+
+  .slick-slide {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s ease;
+
+    &.slick-current {
+      z-index: 3;
+      transform: scale(1);
+      opacity: 1;
+    }
+
+    &:not(.slick-current) {
+      z-index: 1;
+      transform: scale(0.85) translateY(20px); // detrás del central
+      opacity: 0.4;
+    }
+  }
+
+  .slick-slide > div {
+    height: 100%;
+    width: 80%; // el central ocupa casi todo
+    display: flex;
+  }
+
+  .mantine-Paper-root {
+    flex: 1;
+    height: 100%;
   }
 }
 
-#proyectos-container{
-  padding-top: 90px;
+.contenedor-slide {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  overflow: hidden;
+
+  img {
+    display: block;
+    width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+  }
+
+  .info {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background: white;
+    color: black;
+    opacity: 0;
+    transition: opacity 0.4s;
+    padding: 0 20px;
+
+    * {
+      font-family: 'Ubuntu', sans-serif !important;
+    }
+
+    .mantine-Text-root {
+      font-size: larger;
+      white-space: pre-line;
+      text-align: left;
+    }
+
+    svg{
+      justify-self: center;
+      scale: 4;
+    }
+  }
+
+  &:hover {
+    img {
+      opacity: 0.2;
+    }
+    .info {
+      opacity: 1;
+    }
+  }
+
+  @media (max-width: 768px) {
+    img {
+      opacity: 0.2;
+    }
+    .info {
+      opacity: 1;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.title-scanner {
+  position: relative;
+  display: inline-block !important;
+  font-size: 3.8rem;
+  font-weight: 900;
+  line-height: 1.2;
+  color: #ffffff;
+  text-align: center;
+
+
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(45deg, #0e0909, #0f1313, rgb(0, 112, 48), #0f1313);
+
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -150%;
+    width: 80%;
+    height: 100%;
+    border-radius: calc(5% + 20px);
+    background: linear-gradient(
+                    70deg,
+                    transparent 0%,
+                    transparent 15%,
+                    rgba(79, 238, 152, 0.6) 25%,    /* izq  */
+                    rgba(45, 204, 119, 0.97) 35%,    /* centro */
+                    rgb(8, 128, 32) 80%,    /* derecha */
+
+    );
+    animation: scanner 6s linear infinite;
+    pointer-events: none;
+  }
+
+  @keyframes scanner {
+    0%   { transform: translateX(0); }
+    100% { transform: translateX(500%); }
+  }
 }
 
 
@@ -598,7 +765,6 @@
 
 .badge-base {
   border: 3px solid black;
-  transition: all 0.3s ease;
   font-weight: 600;
   padding-left: 16px;
   padding-right: 16px;
