--- a/src/App.scss
+++ b/src/App.scss
@@ -191,6 +191,7 @@
         }
       }
 
+      // La regla anterior `:focus` ha sido eliminada.
     }
   }
 }
@@ -203,6 +204,10 @@
   filter: blur(3px);
 }
 
+#div-circulitos{
+
+
+}
 
 #botonera-certificados{
   display: flex;
@@ -371,31 +376,14 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 #proyectos-container {
   padding-top: 90px;
   margin: 0 auto;
-  width: 60vw;
+  width: 80vw;
   height: 80vh;
 
   @media (max-width: 768px){
     width: 100%;
-    height: 90vh;
-    overflow-y: scroll;
   }
 
   .slick-slider {
@@ -404,7 +392,6 @@
 
   .slick-list {
     height: 100%;
-    overflow: visible; // importante para que se vean los laterales
   }
 
   .slick-track {
@@ -433,7 +420,7 @@
 
   .slick-slide > div {
     height: 100%;
-    width: 80%; // el central ocupa casi todo
+    width: 100%;
     display: flex;
   }
 
@@ -448,7 +435,6 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
-  overflow: hidden;
 
   img {
     display: block;
