--- a/src/App.scss
+++ b/src/App.scss
@@ -245,6 +245,14 @@
 }
 
 
+.icon-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 12px 0;
+}
+
 
 #sobre-mi-container .cuadro-sobremi {
   flex: 0 1 calc(50% - 5rem);
