--- a/src/App.scss
+++ b/src/App.scss
@@ -68,7 +68,7 @@
           -1px 1px 5px rgba(0, 0, 0, 0.78),
           1px -1px 5px rgba(255, 255, 255, 0.74),
           -1px -1px 5px rgba(255, 255, 255, 0.73)
-;
+          ;
 }
 
 .titulo-card {
@@ -207,13 +207,43 @@
 #botonera-certificados{
   display: flex;
   justify-content: space-around;
-  > svg{
+  color: white;
+
+  #espaciador-mobiles{
+    display: none;
+  }
+
+  span{
+    font-size: 30px;
+    font-family: Space Grotesk, sans-serif;
+    text-shadow: 2px 4px 5px rgb(0, 0, 0);
+    pointer-events: none;
+  }
+
+  Button{
+    outline: none !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &:hover{
-      scale: 2.5;
+      border: none;
+      background-color: transparent;
+      scale: 1.4;
+      transition: 0.1s linear;
     }
   }
 
+  @media (max-width: 768px){
+    span{
+      position: absolute;
+    }
+    #espaciador-mobiles{
+      height:10px;
+      width:180px;
+      display: block;
+    }
+  }
 }
 
 #app-container{
@@ -382,12 +412,14 @@
   cursor: pointer;
 }
 
+//=========   PROYECTOS   ===========
+
 
 #proyectos-container {
   padding-top: 90px;
   margin: 0 auto;
   width: 80vw;
-  height: 80vh;
+  height: 90vh;
 
   @media (max-width: 768px){
     width: 100%;
@@ -910,5 +942,50 @@
   #nav-links.menu-movil-activo {
     height: 250px;
     padding: 10px 0;
+  }
+}
+
+/*    =============   wave pointer  =============*/
+
+
+
+
+/* --- Estilos del Círculo Flotante --- */
+.custom-pointer-circle {
+  position: absolute;
+  pointer-events: none;
+  z-index: 9999;
+
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid rgba(20, 22, 141, 0.72);
+  transform: translate(-50%, -50%);
+
+  animation: pulse 1.8s infinite;
+}
+
+@keyframes pulse {
+
+  0% {
+    width: 0px;
+    height: 0px;
+    opacity: 0;
+  }
+
+
+  60% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+    box-shadow: inset 0 0 5px rgba(20, 0, 255, 0.71);
+  }
+
+
+  100% {
+    width: 30px;
+    height: 30px;
+    opacity: 0;
+    box-shadow: inset 0 0 5px rgba(20, 0, 255, 0.76);
+
   }
 }
