--- a/src/App.scss
+++ b/src/App.scss
@@ -168,7 +168,16 @@
   }
 }
 
+#cont-mute-responsive{
+  display: none;
+  @media (max-width: 768px){
+    display: flex;
+  }
+
+}
+
 @media (max-width: 768px) {
+
   .skills-badge {
 
     > .mantine-Badge-root {
@@ -190,13 +199,29 @@
         }
       }
 
-      // La regla anterior `:focus` ha sido eliminada.
     }
   }
 }
 
 
 /* estilos por ID (algunas clases se me mezclaron igualmente) */
+
+#muteButton {
+  background: transparent;
+  border: none;
+
+
+}
+
+#muteButton svg {
+  transition: transform 0.15s ease;
+  transform-origin: center;
+}
+
+#muteButton:hover svg {
+  scale: 1.25;
+}
+
 
 #particles-inicio > canvas {
   opacity: 0.7 !important;
@@ -444,13 +469,13 @@
 
     &.slick-current {
       z-index: 3;
-      transform: scale(1);
+      scale: 1;
       opacity: 1;
     }
 
     &:not(.slick-current) {
       z-index: 1;
-      transform: scale(0.85) translateY(20px);
+      transform: translateY(20px);
       opacity: 0.4;
     }
   }
@@ -684,6 +709,7 @@
   flex-direction: row;
   font-family: 'Space Grotesk', sans-serif;
 
+
   #muchas-gracias-nav{
     display: none;
   }
@@ -694,8 +720,7 @@
 
     #muchas-gracias-nav{
       display: flex!important;
-      position: absolute;
-      transform: translate(20%, 0);
+      transform: translate(40%, 0);
       font-family: 'Space Grotesk', sans-serif;
       color: white;
       width: 70vw;
@@ -827,8 +852,7 @@
   }
 
   &:hover {
-    transform: translateY(-5px);
-    scale: 1.1;
+    transform: translateY(-5px) scale(1.1);
   }
 }
 
